--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>Daniel Schischkin</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="mx-auto bg-slate-100 lg:container lg:my-16">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
